# marketing-agents

./: .env.example  .gitignore  .taskmasterconfig  CHANGELOG.md  CLAUDE.md  DEPLOY.md  LICENSE  Makefile  README.md  check_auto_submission_settings.py  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  render-full.yaml  render-minimal.yaml  render.yaml  requirements.txt  tailwind.config.js
.cursor/: mcp.json
.cursor/rules/: backend-error-handling.mdc  backend-logging.mdc  backend.mdc  code-comments.mdc  code-style.mdc  coding-conventions.mdc  cursor-rules.mdc  django-async-tasks.mdc  frontend.mdc  project-conventions.mdc  self_improve.mdc  stimulus-events.mdc  taskmaster.mdc  ui-ux-design-guidelines.mdc
.github/workflows/: deploy-workers.yml  deploy.yml
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/templates/: example_prd.txt
core/: admin.py  apps.py  choices.py  context_processors.py  forms.py  middleware.py  model_utils.py  models.py  prompts.py  schemas.py  signals.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
core/agents/: analyze_project_agent.py
core/api/: auth.py  schemas.py  views.py
core/migrations/: 0001_initial.py  0002_blogposttitlesuggestion_project_generatedblogpost_and_more.py  0002_project.py  0003_alter_project_blog_theme_alter_project_key_features_and_more.py  0003_project_profile.py  0004_blogposttitlesuggestion.py  0004_project_links_alter_project_language.py  0005_blogposttitlesuggestion_prompt.py  0005_generatedblogpost.py  0006_alter_generatedblogpost_title.py  0006_blogposttitlesuggestion_content_type.py  0006_blogposttitlesuggestion_content_type_and_more.py  0006_profile_anthropic_api_key_profile_replicate_api_key.py  0007_alter_project_url.py  0007_blogposttitlesuggestion_user_score_and_more.py  0007_project_date_analyzed_project_date_scraped.py  0007_project_markdown_content.py  0008_blogposttitlesuggestion_user_score.py  0008_profile_product_profile_state_alter_project_type.py  0008_project_description_project_html_content_and_more.py  0009_blogposttitlesuggestion_archived.py  0009_blogposttitlesuggestion_search_intent_and_more.py  0009_projectpage.py  0010_alter_projectpage_url_and_more.py  0010_remove_blogposttitlesuggestion_archived.py  0010_remove_blogposttitlesuggestion_search_intent_and_more.py  0011_pricingpageupdatessuggestion.py  0012_alter_projectpage_type.py  0013_pricingpageupdatessuggestion_strategy_name_and_more.py  0014_alter_projectpage_type.py  0015_pageroast.py  0015_project_competitors.py  0016_remove_project_competitors_competitor.py  0017_project_competitors_list.py  0018_competitor_competitor_analysis_and_more.py  0019_feedback.py  0020_project_proposed_keywords_keyword_keywordtrend_and_more.py  0021_projectkeyword_use_alter_keyword_country.py  0022_blogpost_status.py  0023_alter_blogpost_status.py  (+11 more)
core/prompts/: generate_blog_content.txt  generate_blog_content_for_seo.txt  generate_blog_content_for_sharing.txt  generate_blog_title_based_on_user_prompt.txt  (+6 more)
deployment/: Dockerfile.server  Dockerfile.workers  entrypoint.sh  prod-shell.sh
docs/: blog_post_scheduling.md  features.md
scripts/: prd.txt
seo_blog_bot/: asgi.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
snippets/: backfill_project_analysis.py  backfill_project_markdown_content.py  backfill_project_pages.py  get_all_automattic_settings.py
tuxseo/: asgi.py  settings.py  sitemaps.py  storages.py  urls.py  utils.py  wsgi.py
(+56 files in other folders)
